BradkenProduction/force-app/main/default/objects/Epic__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <label>Benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>