BradkenProduction/force-app/main/default/objects/Epic__c/fields/Executive_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Executive_Objectives__c</fullName>
    <label>Executive Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>