BradkenProduction/force-app/main/default/objects/Epic__c/fields/Pct_Completed__c.field-meta.xml
<CustomField>
    <fullName>Pct_Completed__c</fullName>
    <formula>Total_Completed_Function_Points__c / Total_Function_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pct Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>