BradkenProduction/force-app/main/default/objects/Epic__c/fields/Pct_Configured__c.field-meta.xml
<CustomField>
    <fullName>Pct_Configured__c</fullName>
    <formula>Stories_in_Testing__c / Total_Stories__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pct Configured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>