BradkenProduction/force-app/main/default/objects/Epic__c/fields/Points_Completed__c.field-meta.xml
<CustomField>
    <fullName>Points_Completed__c</fullName>
    <formula>TEXT( Total_Completed_Function_Points__c ) + &quot;/&quot; + TEXT( Total_Function_Points__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points Completed</label>
    <type>Text</type>
</CustomField>