BradkenProduction/force-app/main/default/objects/Epic__c/fields/Stories_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Stories_Blocked__c</fullName>
    <label># Stories Blocked</label>
    <summaryFilterItems>
        <field>User_Story__c.Blocked__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>User_Story__c.Epic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>