BradkenProduction/force-app/main/default/objects/Epic__c/fields/Stories_in_Config__c.field-meta.xml
<CustomField>
    <fullName>Stories_in_Config__c</fullName>
    <label># Stories in Config</label>
    <summaryFilterItems>
        <field>User_Story__c.Status__c</field>
        <operation>equals</operation>
        <value>User Story Created, User Story Confirmed, Configuration</value>
    </summaryFilterItems>
    <summaryForeignKey>User_Story__c.Epic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>