BradkenProduction/force-app/main/default/objects/Epic__c/fields/Stories_in_Testing__c.field-meta.xml
<CustomField>
    <fullName>Stories_in_Testing__c</fullName>
    <label># Stories in Testing</label>
    <summaryFilterItems>
        <field>User_Story__c.Status__c</field>
        <operation>equals</operation>
        <value>System Testing, UAT Testing</value>
    </summaryFilterItems>
    <summaryForeignKey>User_Story__c.Epic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>