BradkenProduction/force-app/main/default/objects/Epic__c/fields/Total_Function_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Function_Points__c</fullName>
    <label>Total Function Points</label>
    <summarizedField>User_Story__c.Points_Effort_Number__c</summarizedField>
    <summaryForeignKey>User_Story__c.Epic__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>