BradkenProduction/force-app/main/default/objects/Epic__c/fields/Total_Stories__c.field-meta.xml
<CustomField>
    <fullName>Total_Stories__c</fullName>
    <label># Total Stories</label>
    <summaryForeignKey>User_Story__c.Epic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>