BradkenProduction/force-app/main/default/objects/Epic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Stories__c</columns>
    <columns>Stories_in_Config__c</columns>
    <columns>Stories_in_Testing__c</columns>
    <columns>Stories_Complete__c</columns>
    <columns>Stories_Blocked__c</columns>
    <columns>Pct_Completed__c</columns>
    <columns>Points_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>